# CueCreator

./: README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
src/: Album.py  Audio_Info_Delegate.py  Audio_Tree_Widget.py  Cue_Creator.py  Format_Time.py  Load_Tracks.py  Load_Tracks_Dialog.py  Read_Tags.py  Save_Cue_File.py  Track_Info.py  Track_Item_Delegate.py  Track_List.py
src/cuecreator/: Album_Tree_Widget.py  Load_Timings_Dialog.py  Track_Number.py
