[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "CueCreator"
version = "1.0.0"
description = "Create cue file for a directory containing audio files"
authors = ["Ian Haylock <haylocki@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
pyqt5 = "^5.15"
mutagen = "^1.45.1" 

[tool.poetry.packages]
packages = [{ include = "src", from = "." }]