[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CueCreator"
version = "1.0.0"
description = "Create cue file for a directory containing audio files"
authors = [{ name = "Ian Haylock", email = "haylocki@yahoo.co.uk" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyqt5>=5.15",
    "mutagen>=1.45.1"
]

[tool.setuptools]
packages = ["cuecreator"]

[tool.setuptools.package-dir]
"cuecreator" = "src/cuecreator"
